test_cases/negative/export_import_in_function.snek
def Foo() {
    export import "../lib.snek" as lib;
    return Image("rust:latest");
}

export DEFAULT = Foo();
